--- a/index.html
+++ b/index.html
@@ -5,13 +5,40 @@
     <title>my First React</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
 
     <!-- Не используйте это в production -->
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-
     <style>
-        .red {
-            color: red;
+        .none {
+            display: none;
+        }
+
+        body {
+            background: rgba(0, 102, 255, 0.38);
+            font-family: sans-serif;
+        }
+
+        p {
+            margin: 0 0 5px;
+        }
+
+        .article {
+            background: #FFF;
+            border: 1px solid rgba(0, 89, 181, 0.82);
+            width: 600px;
+            margin: 0 0 5px;
+            box-shadow: 2px 2px 5px -1px rgb(0, 81, 202);
+            padding: 3px 5px;
+        }
+
+        .news__author {
+            text-decoration: underline;
+            color: #007DDC;
+        }
+        .news__count {
+            margin: 10px 0 0 0;
+            display: block;
         }
     </style>
 </head>
@@ -19,34 +46,89 @@
     <div id="root"></div>
     <script type="text/babel">
 
-        const News = () => {
-            return <p>К сожалению новостей нет</p>
+        const myNews = [
+            {
+                id: 1,
+                author: 'Саша Печкин',
+                text: 'В четверг, четвертого числа...'
+            },
+            {
+                id: 2,
+                author: 'Просто Вася',
+                text: 'Считаю, что $ должен стоить 35 рублей!'
+            },
+            {
+                id: 3,
+                author: 'Max Frontend',
+                text: 'Прошло 2 года с прошлых учебников, а $ так и не стоит 35'
+            },
+            {
+                id: 4,
+                author: 'Гость',
+                text: 'Бесплатно. Без смс, про реакт, заходи - https://maxpfrontend.ru'
+            }
+        ];
+        class Article extends React.Component {
+            render() {
+                const { author, text } = this.props.data;
+                return (
+                    <div className="article">
+                        <p className="news__author">{author}:</p>
+                        <p className="news__text">{text}</p>
+                    </div>
+                )
+
+            }
+        }
+        class News extends React.Component {
+            renderNews = () => {
+                const { data } = this.props;
+                let newsTemplate = null;
+
+                if (data.length) {
+                    newsTemplate = data.map(function(item) {
+                        return <Article key={item.id} data={item} />
+                    })
+                } else {
+                    newsTemplate = <p>К сожалению новостей нет</p>
+                }
+
+                return newsTemplate;
+            };
+            render() {
+                const { data } = this.props; // аналогично const data = this.props
+
+                return (
+                    <div className="news">
+                        {this.renderNews()}
+                        {
+                            data.length ? <strong className="news__count">Всего новостей: {data.length}</strong> : null
+                        }
+                    </div>
+                );
+            }
+        }
+
+        News.propTypes = {
+            data: PropTypes.array.isRequired
         };
 
-        const Comments = () => {
-            return <p>Нет новостей - комментировать нечего.</p>
+        Article.propTypes = {
+            data: PropTypes.shape({
+                author: PropTypes.string.isRequired,
+                text: PropTypes.string.isRequired
+            })
         };
 
         const App = () => {
             return (
                 <React.Fragment>
-                    <News />
-                    <Comments />
+                    <h3>NEWS</h3>,
+                    <News data={myNews}/>
                 </React.Fragment>
             )
         };
-        // class BigApp extends React.Component {
-        //     render() {
-        //         return (
-        //         <React.Fragment>
-        //             <h1>I am a component BigApp</h1>
-        //             <p className="red">Компоненты можно вкладывать друг в друга</p>
-        //             <App />
-        //             <News />
-        //         </React.Fragment>
-        //         )
-        //     }
-        // }
+
         ReactDOM.render(
             <App />,
             document.getElementById('root')
