--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             margin: 10px 0 0 0;
             display: block;
         }
+        .test-input {
+            margin: 0 5px 5px 0;
+        }
     </style>
 </head>
 <body>
@@ -50,37 +53,62 @@
             {
                 id: 1,
                 author: 'Саша Печкин',
-                text: 'В четверг, четвертого числа...'
+                text: 'В четверг, четвертого числа...',
+                bigText: 'в четыре с четвертью часа четыре чёрненьких чумазеньких чертёнка чертили чёрными чернилами чертёж.'
             },
             {
                 id: 2,
                 author: 'Просто Вася',
-                text: 'Считаю, что $ должен стоить 35 рублей!'
+                text: 'Считаю, что $ должен стоить 35 рублей!',
+                bigText: 'А евро 42!'
             },
             {
                 id: 3,
                 author: 'Max Frontend',
-                text: 'Прошло 2 года с прошлых учебников, а $ так и не стоит 35'
+                text: 'Прошло 2 года с прошлых учебников, а $ так и не стоит 35',
+                bigText: 'А евро опять выше 70.'
             },
             {
                 id: 4,
                 author: 'Гость',
-                text: 'Бесплатно. Без смс, про реакт, заходи - https://maxpfrontend.ru'
+                text: 'Бесплатно. Без смс, про реакт, заходи - https://maxpfrontend.ru',
+                bigText: 'Еще есть группа VK, telegram и канал на youtube! Вся инфа на сайте, не реклама!'
             }
         ];
         class Article extends React.Component {
+            state = {
+                visible: false, // начальное состояние
+            }
+            handleReadMoreClick = (e) => {
+                e.preventDefault();
+                this.setState({ visible: true })
+            }
             render() {
-                const { author, text } = this.props.data;
+                const { author, text, bigText } = this.props.data;
+                const { visible } = this.state;
+                console.log('render', this);
                 return (
                     <div className="article">
                         <p className="news__author">{author}:</p>
                         <p className="news__text">{text}</p>
+                        {
+                            !visible && <a onClick={this.handleReadMoreClick} href="#" className="news__readmore">Подробнее</a>
+                        }
+                        {
+                            visible && <p className="news__big-text">{bigText}</p>
+                        }
                     </div>
                 )
 
             }
         }
         class News extends React.Component {
+            state = {
+                counter: 0, // начальное состояние
+            }
+            countClicks = () => {
+                this.setState({ counter: ++this.state.counter })
+            }
             renderNews = () => {
                 const { data } = this.props;
                 let newsTemplate = null;
@@ -97,13 +125,15 @@
             };
             render() {
                 const { data } = this.props; // аналогично const data = this.props
+                const { counter } = this.state
 
                 return (
                     <div className="news">
                         {this.renderNews()}
                         {
-                            data.length ? <strong className="news__count">Всего новостей: {data.length}</strong> : null
+                            data.length ? <strong onClick={this.countClicks} className="news__count">Всего новостей: {data.length}</strong> : null
                         }
+                        <p>Всего кликов: { counter }</p>
                     </div>
                 );
             }
@@ -116,14 +146,40 @@
         Article.propTypes = {
             data: PropTypes.shape({
                 author: PropTypes.string.isRequired,
-                text: PropTypes.string.isRequired
+                text: PropTypes.string.isRequired,
+                bigText: PropTypes.string.isRequired
             })
         };
+
+        class TestInput extends React.Component {
+            state = {
+                myValue: '', // начальное состояние
+            };
+            changeInput = (e) => {
+                this.setState({ myValue: e.target.value })
+            };
+            clickOnButton = (e) => {
+                alert(this.state.myValue);
+            };
+            render() {
+                return (
+                    <React.Fragment>
+                        <input
+                            className="test-input"
+                            onChange={this.changeInput}
+                            value={this.state.myValue}
+                            placeholder="Введите значение" />
+                        <button onClick={this.clickOnButton}>Показать alert</button>
+                    </React.Fragment>
+                )
+            }
+        }
 
         const App = () => {
             return (
                 <React.Fragment>
-                    <h3>NEWS</h3>,
+                    <h3>NEWS</h3>
+                    <TestInput />
                     <News data={myNews}/>
                 </React.Fragment>
             )
